--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <section id="certificates">
     <h2>Certificates</h2>
     <div class="certificate-gallery">
-  <img src="C:\Users\admin\Desktop\porfolio\GPCSSI 2021 Intern Complitin Certificate.jpg" alt="Cyber Security Internship Certificate" onclick="openImage(this)">
+  <img src="GPCSSI 2021 Intern Complitin Certificate.jpg" alt="Cyber Security Internship Certificate" onclick="openImage(this)">
     <img src="C:\Users\admin\Desktop\porfolio\3c6a0f42-bcac-4b53-a7e3-6ece82ca0b24.png" alt="Professional Certificate 1" onclick="openImage(this)">
     <img src="C:\Users\admin\Desktop\porfolio\8d01b91f-80bb-4cbd-9030-59be4d12b9b6.png" alt="Professional Certificate 2" onclick="openImage(this)">
     <img src="C:\Users\admin\Desktop\porfolio\272f97e6-c445-47bf-a621-ff63e24455f4(5).png" alt="Professional Certificate 3" onclick="openImage(this)">
