--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
     <h2>Certificates</h2>
     <div class="certificate-gallery">
   <img src="GPCSSI 2021 Intern Complitin Certificate.jpg" alt="Cyber Security Internship Certificate" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\3c6a0f42-bcac-4b53-a7e3-6ece82ca0b24.png" alt="Professional Certificate 1" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\8d01b91f-80bb-4cbd-9030-59be4d12b9b6.png" alt="Professional Certificate 2" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\272f97e6-c445-47bf-a621-ff63e24455f4(5).png" alt="Professional Certificate 3" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\42245b4e-17c1-4834-ba0f-4f9c4352c107.png" alt="Professional Certificate 4" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\94324de1-fa14-4a1a-8c03-e2245ef57c5e(7).png" alt="Professional Certificate 5" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\a6299c9d-eaac-4389-8294-947a981c41a2(3).png" alt="Professional Certificate 6" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\AWS security .png" alt="AWS Security Certificate" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\C programming Language certified.png" alt="Professional Certificate 7" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\cb637d5e-9ad2-4edb-b562-9336e5140c4f.png" alt="Professional Certificate 8" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\CISCO Labs Crash Cource Ec-council.png" alt="Professional Certificate 9" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\cutshot html css.jpg" alt="Professional Certificate 10" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\dea6fe67-c9eb-4a0e-8a27-73e5037dfe6d(5).png" alt="Professional Certificate 11" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\Ethical Hacking From Internshala.png" alt="Professional Certificate 12" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\Hack-n-shala Hackersvilla.jpg" alt="Professional Certificate 13" onclick="openImage(this)">
-    <img src="C:\Users\admin\Desktop\porfolio\Python Basics.jpg" alt="Professional Certificate 17" onclick="openImage(this)">
+    <img src="3c6a0f42-bcac-4b53-a7e3-6ece82ca0b24.png" alt="Professional Certificate 1" onclick="openImage(this)">
+    <img src="8d01b91f-80bb-4cbd-9030-59be4d12b9b6.png" alt="Professional Certificate 2" onclick="openImage(this)">
+    <img src="272f97e6-c445-47bf-a621-ff63e24455f4(5).png" alt="Professional Certificate 3" onclick="openImage(this)">
+    <img src="42245b4e-17c1-4834-ba0f-4f9c4352c107.png" alt="Professional Certificate 4" onclick="openImage(this)">
+    <img src="94324de1-fa14-4a1a-8c03-e2245ef57c5e(7).png" alt="Professional Certificate 5" onclick="openImage(this)">
+    <img src="a6299c9d-eaac-4389-8294-947a981c41a2(3).png" alt="Professional Certificate 6" onclick="openImage(this)">
+    <img src="AWS security .png" alt="AWS Security Certificate" onclick="openImage(this)">
+    <img src="C programming Language certified.png" alt="Professional Certificate 7" onclick="openImage(this)">
+    <img src="cb637d5e-9ad2-4edb-b562-9336e5140c4f.png" alt="Professional Certificate 8" onclick="openImage(this)">
+    <img src="CISCO Labs Crash Cource Ec-council.png" alt="Professional Certificate 9" onclick="openImage(this)">
+    <img src="cutshot html css.jpg" alt="Professional Certificate 10" onclick="openImage(this)">
+    <img src="dea6fe67-c9eb-4a0e-8a27-73e5037dfe6d(5).png" alt="Professional Certificate 11" onclick="openImage(this)">
+    <img src="Ethical Hacking From Internshala.png" alt="Professional Certificate 12" onclick="openImage(this)">
+    <img src="Hack-n-shala Hackersvilla.jpg" alt="Professional Certificate 13" onclick="openImage(this)">
+    <img src="Python Basics.jpg" alt="Professional Certificate 17" onclick="openImage(this)">
  <li><p><a href="https://certs.ine.com/e24a33f8-2808-4893-8b23-1eafa44888f5" target="_blank">
       View eJPT Certificate
     </a></p> </li>
@@ -88,7 +88,7 @@
   <section id="contact">
     <h2>Contact Me</h2>
     <p>Available for training, workshops, and cybersecurity opportunities.</p>
-    <a href="C:\Users\admin\Desktop\porfolio\Dhruv Pruthi Cyber Security -1.pdf" download>📄 Download My Resume</a>
+    <a href="Dhruv Pruthi Cyber Security -1.pdf" download>📄 Download My Resume</a>
   </section>
 
   <div id="lightbox" onclick="this.style.display='none'">
