--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
   <section id="about">
     <h2>About Me</h2>
     <p>
-      I'm responsible for helping organizations identify and resolve security vulnerabilities affecting digital assets and networks. With training experience in CEH, Networking, Linux, and Cybersecurity, I also blog and conduct workshops.
+      I’m <strong>Dhruv Pruthi</strong>, a cybersecurity enthusiast, eJPT-certified professional, and experienced trainer with a Bachelor's degree in Computer Science and Engineering specializing in Cybersecurity and Forensics. Over the years, I have gained hands-on experience in vulnerability assessment, penetration testing, network security, and ethical hacking.
     </p>
+    <p>
+    My journey includes interning with the <strong>Gurugram Police Cyber Cell</strong> under the guidance of <strong>IPS K.K. Rao</strong> and <strong>Rakshit Tandon</strong>, where I worked on real-world cybercrime investigations. As a cybersecurity trainer at <strong>HACKTECHMEDIA</strong> and <strong>Cybrom Technologies</strong>, I have trained students in CEH, Linux server management, penetration testing, and advanced cyber defense techniques.
+  </p>
+  <p>
+    I am passionate about sharing knowledge, which reflects in my role as a blogger and mentor. My technical skillset includes tools like Metasploit, Burp Suite, Nmap, Nessus, Wireshark, and frameworks like OWASP and QSINT. I actively contribute to security awareness by conducting hands-on workshops and mentoring cybersecurity students.
+  </p>
+  <p>
+    When I’m not working with exploits or malware samples, I enjoy basketball, swimming, and learning new technologies.
+  </p>
     <ul>
       <li>Email: dhruvpruthi29@gmail.com</li>
       <li>Phone: 9468078206</li>
@@ -36,7 +45,8 @@
     <h2>Skills & Tools</h2>
     <div class="skills">
       <div><strong>Languages:</strong> Bash, Python, JavaScript, HTML/CSS, PHP, SQL</div>
-      <div><strong>Tools:</strong> Nmap, Burp Suite, OWASP ZAP, Metasploit, Wireshark, Hydra, WPScan</div>
+      <div><strong>Tools:</strong> Nmap, Netstat, Traceroute, Tracert, Nslookup, DIG, theHarvester, Whois, Recon-ng, Dmitry, DNSenum, DNSrecon, Shodan, Maltego, Spiderfoot, Google Dorks, FOCA, Netcraft, SamSpade, OSINT Framework, crt.sh, MXToolbox, DNSDumpster, ViewDNS.info, IntoDNS, SubdomainFinder, Hunter.io, Censys.io, SecurityTrails, WaybackMachine, VirusTotal, YouGetSignal, site:, filetype:, intitle:, inurl:, "..." (Exact match), Zenmap, Masscan, Angry IP Scanner, Advanced IP Scanner, Netdiscover, Hping3, Netcat, TCPDump, Enum4linux, nbtscan, SNMPwalk, LDAPsearch, Xprobe2, Showmount, RPCClient, SMBMap, TCP SYN, TCP ACK, NULL, FIN, Xmas, OS Detection, Service Version Detection, Vulnerability Scan, Aggressive Scan, http-title, ssl-enum-ciphers, snmp-info, smb-enum-shares, Nessus, OpenVAS, Nikto, Wapiti, Skipfish, SQLMap, WPScan, Burp Suite, Acunetix, OWASP ZAP, Retire.js, Vulners, Metasploit Framework, Mimikatz, Cain & Abel, John the Ripper, Hydra, THC-Hydra, Hashcat, PowerSploit, Empire, PsExec, Nishang, VirusTotal, Hybrid Analysis, Cuckoo Sandbox, PEiD, Exeinfo PE, IDA Pro, Ghidra, Process Monitor, Autoruns, ProcDot, Wireshark, Ettercap, BetterCAP, SSLStrip, Social-Engineer Toolkit, BeEF, Gophish, King Phisher, Zphisher, Evilginx2, BlackEye, LOIC, HOIC, Slowloris, R-U-Dead-Yet, Cookie Cadger, Hamster, Ferret, Scapy, Snort, Honeyd, IPtables, Dirb, Gobuster, Wfuzz, XSSer, XSS Radar, Aircrack-ng, Airodump-ng, Reaver, Kismet, WiFi-Pumpkin, Wifite, PixieWPS, MobSF, APKTool, Drozer, Frida, Androbugs, Objection, jadx, Binwalk, Firmwalker, Firmware Mod Kit, Bevywise IoT Simulator, SCADA Strangelove, PLCScan, ScoutSuite, Pacu, CloudSploit, Prowler, CloudMapper, AWS CLI, AZUREHound , GCP Scanner, GPG, OpenSSL, Cryptool, VeraCrypt, Wappalyzer, BuiltWith, HackBar, Tamper Data, FoxyProxy, EditThisCookie, Cookie Editor, ShellGPT, ChatGPT, FraudGPT, DeepExploit, AutoRecon, CyberChef.
+ </div>
       <div><strong>OS:</strong> Kali Linux, Parrot, Redhat, Windows, Windows Server</div>
     </div>
   </section>
