--- a/index.html
+++ b/index.html
@@ -59,14 +59,19 @@
       <p>Worked under the guidance of IPS K.K. Rao and Rakshit Tandon at Cyber Crime Cell.</p>
     </div>
     <div class="job">
+      <h3>MERN STACK developer Intern/h3>
+      <p>Jan 2023 - June 2023</p>
+      <p>I made Dr.app , JWT based Authentication App and worked on some more models based on Mongo , React , Expresso , Node</p>
+    </div>
+    <div class="job">
       <h3>HACKTECHMEDIA - Cyber Security Trainer</h3>
       <p>July 2023 - July 2024</p>
-      <p>Trained 3 batches in Diploma, Master's, and Advanced Cyber Security. Responsible for blogging and live demos.</p>
+      <p>Successfully Trained 3 batches in Diploma, Master's, and Advanced Cyber Security. Responsible for blogging and live demos.</p>
     </div>
     <div class="job">
       <h3>Cybrom Technologies - Cyber Security Trainer</h3>
       <p>Aug 2024 - May 2025</p>
-      <p>Training in CEH, Pen Testing, Linux Server, Windows Server, CCNA, Networking.</p>
+      <p>Successfully Trained 21 Batches in CEH, Pen Testing, Linux Server, Windows Server, CCNA, Networking.</p>
     </div>
   </section>
 
