--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <p>Worked under the guidance of IPS K.K. Rao and Rakshit Tandon at Cyber Crime Cell.</p>
     </div>
     <div class="job">
-      <h3>MERN STACK developer Intern/h3>
+      <h3>MERN STACK developer Intern</h3>
       <p>Jan 2023 - June 2023</p>
       <p>I made Dr.app , JWT based Authentication App and worked on some more models based on Mongo , React , Expresso , Node</p>
     </div>
